--- a/TestViewPage/res/values/strings.xml
+++ b/TestViewPage/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    <string-array name="pop">
+        
+        <item >我在哪</item>
+        <item >扫一扫</item>
+        <item >摇一摇</item>
+        <item >喊出来</item>
+
+    </string-array>
+
 </resources>
